syntax = "proto3";

option java_multiple_files = false;
option java_package = "com.cpdss.common.generated";

// import common definitions like ResponseStatus
import "common.proto";

service CargoInfoService {
	rpc GetCargoInfo (CargoRequest) returns (CargoReply) {
	}

	rpc GetCargoInfoByPaging(CargoRequestWithPaging) returns (CargoReply){}

	rpc GetCargoInfoById (CargoRequest) returns (CargoDetailReply) {
	}
	
	rpc GetCargoInfosByCargoIds (CargoListRequest) returns (CargoReply) {
	}
	
}
message CargoListRequest{
	repeated int64 id = 1;
}

message CargoDetailReply{
	CargoDetail cargoDetail = 1;
	ResponseStatus responseStatus = 2;
}
message CargoRequest {
	int64 companyId = 1;
	int64 vesselId = 2;
	int64 voyageId = 3;
	int64 loadableStudyId = 4;
	int64 cargoId = 5;
}

message CargoRequestWithPaging{
	int64 offset = 1;
	int64 limit = 2;
}

message CargoDetail {
	int64 id = 1;
	string crudeType = 2;
	string abbreviation = 3;
	string api = 4;
	bool isCondensateCargo = 5;
	bool isHrvpCargo = 6;
}

message CargoReply {
	ResponseStatus responseStatus = 1;
	repeated CargoDetail cargos = 2;
}