syntax = "proto3";

option java_multiple_files = false;
option java_package = "com.cpdss.common.generated";

// import common definitions like ResponseStatus
import "common.proto";

service LoadableStudyService {
	rpc SaveVoyage (VoyageRequest) returns (VoyageReply) {
	}
	
	rpc SaveLoadableQuantity (LoadableQuantityRequest) returns (LoadableQuantityReply) {
	}
	
	rpc FindLoadableStudiesByVesselAndVoyage (LoadableStudyRequest) returns (LoadableStudyReply){
	}

	rpc SaveLoadableStudy (LoadableStudyDetail) returns (LoadableStudyReply){
	}
	
	rpc SaveCargoNomination (CargoNominationRequest) returns (CargoNominationReply){
	}
	
	rpc GetLoadableStudyPortRotation (PortRotationRequest) returns (PortRotationReply){
	}
}


message VoyageRequest {
	int64 captainId = 1;
	int64 chiefOfficerId = 2;
	int64 companyId = 3;
	int64 vesselId = 4;
	string voyageNo = 5;
}

message VoyageReply {
	string status = 1;
	string message = 2;
	int64 voyageId = 3;
}

message StatusReply {
	string status = 1;
	string code = 2;
	string message = 3;
}


message LoadableQuantityRequest {
	string limitingDraft = 1;
	string estSeaDensity = 2;
	string tpc = 3;
	string estSagging = 4;
	string displacmentDraftRestriction = 5;
	string vesselLightWeight = 6;
	string dwt = 7;
	string sgCorrection = 8;
	string saggingDeduction = 9;
	string estFOOnBoard = 10;
	string estDOOnBoard = 11;
	string estFreshWaterOnBoard = 12;
	string constant = 13;
	string otherIfAny = 14;
	string totalQuantity = 15;
	string distanceFromLastPort = 16;
	string vesselAverageSpeed = 17;
	string foConsumptionPerDay = 18;
	string estTotalFOConsumption = 19;
	int64 loadableStudyId = 20;
}

message LoadableQuantityReply {
	string status = 1;
	string message = 2;
	int64 loadableQuantityId = 3;
}

message LoadableStudyRequest{
	int64 companyId = 1;
	int64 vesselId = 2;
	int64 voyageId = 3;
}

message LoadableStudyAttachment{
	bytes byteString = 1;
	string fileName = 2;
}

message LoadableStudyDetail{
	int64 id = 1;
	string name = 2;
	string detail = 3;
	string status = 4;
	string createdDate = 5;
	string charterer = 6;
	string subCharterer = 7;
	string draftMark = 8;
	int64 loadLineXId = 9;
	string draftRestriction = 10;
	string maxTempExpected = 11;
	int64 duplicatedFromId = 12;
	int64 voyageId = 13;
	int64 vesselId = 14;
	repeated LoadableStudyAttachment attachments = 15;
}

message LoadableStudyReply{
	StatusReply responseStatus = 1;
	repeated  LoadableStudyDetail loadableStudies = 2;
	int64 id = 3;
}

message LoadingPortDetail{
	int64 portId = 1;
	string quantity = 2;
}

message segregationDetail{
	int64 id = 1;
	string value = 2;
}

message CargoNominationDetail {
	int64 id = 1;
	int64 loadableStudyId = 2;
	int64 priority = 3;
	string color = 4;
	int64 cargoId = 5;
	string abbreviation = 6;
	repeated LoadingPortDetail loadingPortDetails = 7;
	string maxTolerance = 8;
	string minTolerance = 9;
	string apiEst = 10;
	string tempEst = 11;
	int64 segregationId = 12;
}

message CargoNominationRequest {
	int64 vesselId = 1;
	int64 voyageId = 2;
	int64 loadableStudyId = 3;
	CargoNominationDetail cargoNominationDetail = 4;
}

message CargoNominationReply {
	ResponseStatus responseStatus = 1;
	int64 cargoNominationId = 2;
}


message PortRotationRequest{
	int64 loadableStudyId = 1;
	int64 vesselId = 2;
	int64 voyageId = 3;
}

message PortRotationDetail{
	int64 id = 1;
	int64 portId=2;
	int64 birthId=3;
	int64 operationId=4;
	string seaWaterDensity=5;
	string distanceBetweenPorts =6;
	string timeOfStay=7;
	string maxDraft=8;
	string maxAirDraft=9;
	string eta=10;
	string etd=11;
	string layCanFrom=12;
	string layCanTo=13;
	int64 loadableStudyId=14;
}

message Operation{
	int64 id=1;
	string operationName=2;
}

message PortRotationReply{
	StatusReply responseStatus = 1;
	repeated PortRotationDetail ports=2;
	repeated Operation operations=3;
}
